--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "bumbummen99/shoppingcart": "^4.2",
         "encore/laravel-admin": "^1.8",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.7",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
